force-app/main/default/objects/SDO_Service_Workforce_Chat_History__c.object
<CustomObject>
    <description>What: Used to showcase Workforce Engagement. 
Who: Marc Hutchinson &amp; the Service Team. 
When: July 2021</description>
    <fields>
        <fullName>Custom__c</fullName>
        <label>Custom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dataset_Version__c</fullName>
        <label>Dataset Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Handle_Time__c</fullName>
        <label>Handle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMER</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <label>Skill</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>*Chat Transcript History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Chat Transcript History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>*Chat Transcript History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>